[gd_scene load_steps=32 format=3 uid="uid://blgxkiiadrh4k"]

[ext_resource type="Script" path="res://UI/title_screen.gd" id="1_sll7u"]
[ext_resource type="Texture2D" uid="uid://dw2ccthpfjttu" path="res://assets/background/backstars.png" id="2_3qnxe"]
[ext_resource type="Texture2D" uid="uid://jcnh6brdlsia" path="res://assets/background/title_background.png" id="2_ntlrh"]
[ext_resource type="Texture2D" uid="uid://b5yprj84nn3wy" path="res://assets/background/frontstars.png" id="3_1af36"]
[ext_resource type="Texture2D" uid="uid://bnfjffy0den5i" path="res://assets/player/player.png" id="5_a5er3"]
[ext_resource type="Texture2D" uid="uid://u1bm7mc63n4" path="res://assets/title frames/title_frame1.png" id="5_cuo25"]
[ext_resource type="Texture2D" uid="uid://cdmctu774i3sh" path="res://assets/title frames/title_frame2.png" id="6_kjw6u"]
[ext_resource type="Texture2D" uid="uid://cyjnqyi7s0nrl" path="res://assets/title frames/title_frame3.png" id="7_thvtc"]
[ext_resource type="Texture2D" uid="uid://wu88y8hiikbp" path="res://assets/title frames/title_frame4.png" id="8_qa5s2"]
[ext_resource type="Texture2D" uid="uid://m3x5yf0rcrfk" path="res://assets/title frames/title_frame5.png" id="9_81u0r"]
[ext_resource type="Texture2D" uid="uid://b8n05fusfimxf" path="res://assets/title frames/title_frame6.png" id="10_p8dfi"]
[ext_resource type="Texture2D" uid="uid://dqbdd1r7svv6u" path="res://assets/title frames/title_frame7.png" id="11_41k4s"]
[ext_resource type="Texture2D" uid="uid://ph1iy7c6garv" path="res://assets/title frames/title_frame8.png" id="12_sj64h"]
[ext_resource type="Texture2D" uid="uid://c72mrqo04ydbh" path="res://assets/title frames/title_frame9.png" id="13_ys6jp"]
[ext_resource type="Texture2D" uid="uid://d3hvcdqpgwxyn" path="res://assets/title frames/title_frame10.png" id="14_qkh8x"]
[ext_resource type="Texture2D" uid="uid://btuh6rfm711wx" path="res://assets/title frames/title_frame11.png" id="15_klry3"]
[ext_resource type="Texture2D" uid="uid://og3754b1x8qw" path="res://assets/title frames/title_frame12.png" id="16_r0kak"]
[ext_resource type="Texture2D" uid="uid://dynt2fr7sqj0p" path="res://assets/title frames/title_frame13.png" id="17_he1j4"]
[ext_resource type="Texture2D" uid="uid://dbt1q2vjm25mw" path="res://assets/title frames/title_frame14.png" id="18_vpci3"]
[ext_resource type="Texture2D" uid="uid://c3pv0d50m41f1" path="res://assets/title frames/title_frame15.png" id="19_nr8mt"]
[ext_resource type="Texture2D" uid="uid://sy0y6m24ejlx" path="res://assets/title frames/title_frame16.png" id="20_dp6cy"]
[ext_resource type="Texture2D" uid="uid://bcg764qg03hee" path="res://assets/title frames/title_frame17.png" id="21_v81km"]
[ext_resource type="Texture2D" uid="uid://dl34a501bwv0x" path="res://assets/title frames/title_frame18.png" id="22_uitth"]
[ext_resource type="Texture2D" uid="uid://cbkd0nlnaaxca" path="res://assets/title frames/title_frame19.png" id="23_tfnq8"]
[ext_resource type="Texture2D" uid="uid://dgrfe3bt6d03f" path="res://assets/title frames/title_frame20.png" id="24_eok6s"]

[sub_resource type="SpriteFrames" id="SpriteFrames_clalr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_cuo25")
}, {
"duration": 1.0,
"texture": ExtResource("6_kjw6u")
}, {
"duration": 1.0,
"texture": ExtResource("7_thvtc")
}, {
"duration": 1.0,
"texture": ExtResource("8_qa5s2")
}, {
"duration": 1.0,
"texture": ExtResource("9_81u0r")
}, {
"duration": 1.0,
"texture": ExtResource("10_p8dfi")
}, {
"duration": 1.0,
"texture": ExtResource("11_41k4s")
}, {
"duration": 1.0,
"texture": ExtResource("12_sj64h")
}, {
"duration": 1.0,
"texture": ExtResource("13_ys6jp")
}, {
"duration": 1.0,
"texture": ExtResource("14_qkh8x")
}, {
"duration": 1.0,
"texture": ExtResource("15_klry3")
}, {
"duration": 1.0,
"texture": ExtResource("16_r0kak")
}, {
"duration": 1.0,
"texture": ExtResource("17_he1j4")
}, {
"duration": 1.0,
"texture": ExtResource("18_vpci3")
}, {
"duration": 1.0,
"texture": ExtResource("19_nr8mt")
}, {
"duration": 1.0,
"texture": ExtResource("20_dp6cy")
}, {
"duration": 1.0,
"texture": ExtResource("21_v81km")
}, {
"duration": 1.0,
"texture": ExtResource("22_uitth")
}, {
"duration": 1.0,
"texture": ExtResource("23_tfnq8")
}, {
"duration": 1.0,
"texture": ExtResource("24_eok6s")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vyhs7"]
atlas = ExtResource("5_a5er3")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d38fk"]
atlas = ExtResource("5_a5er3")
region = Rect2(102, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty5em"]
atlas = ExtResource("5_a5er3")
region = Rect2(204, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kynvn"]
atlas = ExtResource("5_a5er3")
region = Rect2(306, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_2d2wj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyhs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d38fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty5em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kynvn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sll7u")

[node name="FocusControl" type="Control" parent="."]
process_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2

[node name="TitleBackground" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -384.0
offset_right = 512.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ntlrh")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -768.0
offset_right = 512.0
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_3qnxe")
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -1152.0
offset_right = 512.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_1af36")
metadata/_edit_lock_ = true

[node name="Title" type="AnimatedSprite2D" parent="."]
position = Vector2(512, 251)
sprite_frames = SubResource("SpriteFrames_clalr")
frame = 9
frame_progress = 0.974294

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(512, 436)
sprite_frames = SubResource("SpriteFrames_2d2wj")
frame = 2
frame_progress = 0.580846

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -233.0
offset_right = 100.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
metadata/_edit_group_ = true

[node name="StartButton" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_left = NodePath("../../FooterMarginContainer/HBoxContainer/ToggleAnimationContainer/AnimationToggle")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../../FooterMarginContainer/HBoxContainer/ToggleAnimationContainer/AnimationToggle")
theme_override_font_sizes/font_size = 32
text = "start"

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_left = NodePath("../StartButton")
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_right = NodePath("../../FooterMarginContainer/HBoxContainer/HBoxContainer/ResetHighScoreButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../FooterMarginContainer/HBoxContainer/HBoxContainer/ResetHighScoreButton")
theme_override_font_sizes/font_size = 24
text = "exit"

[node name="FooterMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -78.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="FooterMarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="FooterMarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HighScoreContainer" type="HBoxContainer" parent="FooterMarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HighScoreLabel" type="Label" parent="FooterMarginContainer/HBoxContainer/HBoxContainer/HighScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "high score:"

[node name="HighScoreValue" type="Label" parent="FooterMarginContainer/HBoxContainer/HBoxContainer/HighScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="ResetHighScoreButton" type="Button" parent="FooterMarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../../../Buttons/ExitButton")
focus_neighbor_right = NodePath("../../ToggleAnimationContainer/AnimationToggle")
focus_next = NodePath("../../ToggleAnimationContainer/AnimationToggle")
focus_previous = NodePath("../../../../Buttons/ExitButton")
theme_override_font_sizes/font_size = 24
text = "reset"

[node name="HSpace" type="Control" parent="FooterMarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToggleAnimationContainer" type="HBoxContainer" parent="FooterMarginContainer/HBoxContainer"]
layout_mode = 2
metadata/_edit_group_ = true

[node name="AnimationToggle" type="CheckButton" parent="FooterMarginContainer/HBoxContainer/ToggleAnimationContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../../HBoxContainer/ResetHighScoreButton")
focus_neighbor_right = NodePath("../../../../Buttons/StartButton")
focus_next = NodePath("../../../../Buttons/StartButton")
focus_previous = NodePath("../../HBoxContainer/ResetHighScoreButton")
button_pressed = true

[node name="AnimationToggleLabel" type="Label" parent="FooterMarginContainer/HBoxContainer/ToggleAnimationContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "toggle animation
"

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="FooterMarginContainer/HBoxContainer/HBoxContainer/ResetHighScoreButton" to="." method="_on_reset_high_score_button_pressed"]
[connection signal="toggled" from="FooterMarginContainer/HBoxContainer/ToggleAnimationContainer/AnimationToggle" to="." method="_on_animation_toggled"]
